--- a/src/main/resources/FXML/UserModalWindow.fxml
+++ b/src/main/resources/FXML/UserModalWindow.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -55,19 +56,22 @@
                         <HBox prefHeight="35.0" prefWidth="594.0">
                            <children>
                               <Label prefHeight="38.0" prefWidth="59.0" text="ФИО:" />
-                              <TextField fx:id="fullnameTextField" editable="false" prefHeight="34.0" prefWidth="207.0" />
+                              <TextField fx:id="fullnameTextField" editable="false" prefHeight="33.0" prefWidth="300.0" />
                            </children>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox prefHeight="35.0" prefWidth="594.0">
                            <children>
                               <Label prefHeight="38.0" prefWidth="59.0" text="Карта:" />
-                              <TextField fx:id="cardTextField" editable="false" prefHeight="34.0" prefWidth="207.0" />
+                              <TextField fx:id="cardTextField" editable="false" prefHeight="34.0" prefWidth="300.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="42.0" prefWidth="594.0">
                            <children>
                               <Label prefHeight="35.0" prefWidth="59.0" text="Тип:" />
-                              <TextField fx:id="typeTextField" editable="false" prefHeight="34.0" prefWidth="207.0" />
+                              <TextField fx:id="typeTextField" editable="false" prefHeight="34.0" prefWidth="300.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="594.0">
@@ -84,7 +88,11 @@
                   </VBox>
                </center>
                <left>
-                  <VBox prefHeight="184.0" prefWidth="188.0" BorderPane.alignment="CENTER" />
+                  <ImageView fx:id="userPhoto" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                     <BorderPane.margin>
+                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                     </BorderPane.margin>
+                  </ImageView>
                </left>
             </BorderPane>
          </children>
