--- a/src/main/resources/FXML/UserModalWindow.fxml
+++ b/src/main/resources/FXML/UserModalWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -171,6 +172,24 @@
                   </HBox>
                </children>
             </GridPane>
+            <VBox prefHeight="72.0" prefWidth="274.0">
+               <children>
+                  <Label prefHeight="25.0" prefWidth="192.0" text="Фильтр зданий">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <HBox>
+                     <children>
+                        <ComboBox fx:id="buildingsComboBox" prefHeight="24.0" prefWidth="228.0">
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </ComboBox>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
             <Button fx:id="updateButton" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="38.0" prefWidth="228.0" text="Обновить" />
          </children>
          <BorderPane.margin>
